--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,7 +1,6 @@
 /* styles in src/style directory are applied to the whole page */
 body {
-  background: #0147A7;
-  color: #fff;
+  background: #f1f1f1;
 }
 
 a {
