--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,4 +1,5 @@
 <div board ng-if="CTRL.showBoard()"></div>
+<chat user="CTRL.user"></chat>
 <div ng-if="CTRL.showPlayerSetup()">
   <h2 style="text-align: center;margin-bottom: 40px;">Please set up your player character data</h2>
   <form ng-submit="CTRL.savePlayer(playerForm)" role="form" ng-init="playerForm = {}" novalidate>
