--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,4 +1,17 @@
 /* styles in src/style directory are applied to the whole page */
+#chat::-webkit-scrollbar {
+    width: 1em;
+}
+
+#chat::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+#chat::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+
 body {
   padding: 0px;
   margin: 0px;
@@ -35,4 +48,34 @@ footer {
 
 h2, form label {
   color: white;
+}
+
+#chat {
+  position: absolute;
+  background: #2323229e;
+  width: 560px;
+  left: 0;
+  top: 50px;
+  max-height: 400px;
+  overflow: auto;
+  padding: 0;
+  padding-top: 20px;
+  padding-left: 5px;
+  padding-bottom: 5px;
+  padding-right: 5px;
+}
+
+#chat ul {
+  list-style: none;
+  padding: 0;
+}
+
+#chat ul li {
+  color: white;
+  margin-bottom: 10px;
+}
+
+#chat ul li .author {
+  color: #8a6d3b;
+  font-weight: bold;
 }
